--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         line-height: 1.5;
         color: white;
       }
+
+      footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
     </style>
 </head>
 <body>
@@ -66,5 +75,8 @@
         <p>还在等什么？立即购买 iqBoost，释放您的全部潜力！</p>
     </div>
 </div>
+<footer>
+    <p>&copy; 2023 XzaiCloud</p>
+</footer>
 </body>
 </html>
