--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 </div>
 <footer>
-    <p>&copy; 2023 XzaiCloud</p>
+    <p>&copy; 2023 XzaiCloud &boxv; 纯属恶搞，非广告。</p>
 </footer>
 </body>
 </html>
