更新页面，美化ui

--- a/index.html
+++ b/index.html
@@ -1,82 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>您需要 iqBoost 吗？</title>
+<html lang="zh">
+  <head>
     <meta charset="UTF-8">
-    <style>
-      body {
-        background-color: black;
-        color: white;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-
-      #container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        width: 100%;
-      }
-
-      #left-side {
-        flex: 1;
-        height: 100%;
-        background-color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      #right-side {
-        flex: 1;
-        height: 100%;
-        background-color: black;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0 50px;
-      }
-
-      h1 {
-        font-size: 36px;
-        margin-bottom: 20px;
-        color: white;
-      }
-
-      p {
-        font-size: 18px;
-        line-height: 1.5;
-        color: white;
-      }
-
-      footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
-</head>
-<body>
-<div id="container">
-    <div id="left-side">
-        <img src="./iqboost.jpg" alt="Image" width="300">
-    </div>
-    <div id="right-side">
-        <h1>什么是 iqBoost？</h1>
-        <p>你是否感到你的智商一直在阻碍你的发展？你是否期望自己能变得更聪明、更有创造力、更成功？</p>
-        <p>现在，我们推出了 iqBoost 这款革命性的新产品可以帮助你释放全部潜力。我们的专有配方基于尖端研究，并已被证明在提高大脑功能方面非常有效。</p>
-        <p>最棒的是， iqBoost 非常容易使用。只需服用一粒胶囊，您就会很快感受到效果。无论是在备考考试、进行项目工作还是只是想提高认知能力， iqBoost 都是适合您的产品。</p>
-        <p>还在等什么？立即购买 iqBoost，释放您的全部潜力！</p>
-    </div>
-</div>
-<footer>
-    <p>&copy; 2023 XzaiCloud &boxv; 纯属恶搞，非广告。</p>
-</footer>
-</body>
+    <link rel="icon" href="./favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xzaiの个人主页</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
